--- a/src/search-bar/search-bar.component.css
+++ b/src/search-bar/search-bar.component.css
@@ -29,4 +29,6 @@ input[type="date"].modern-date::-webkit-calendar-picker-indicator {
   .custom-btn:hover {
     background-color: #006eff; /* Darker blue on hover */
   }
-  
+  .w-full {
+    width: 120%;
+}
